bat.bool1.in1020.In1020.scala.error
Erreur de compilation :
In1020:1: error: type mismatch;
 found   : Int(21)
 required: Boolean
def in1020(a:Int, b:Int):Boolean = {if (9<a<21 || 9<b<21){return true}; else {return false}
                                            ^In1020:1: error: type mismatch;
 found   : Int(21)
 required: Boolean
def in1020(a:Int, b:Int):Boolean = {if (9<a<21 || 9<b<21){return true}; else {return false}
                                                      ^