bat.bool1.in1020.In1020.scala.code
def in1020(a:Int, b:Int):Boolean = {if (9<a<21 || 9<b<21){return true}; else {return false}
}